<resources>
    <string name="app_name">I Composition</string>
    <string name="welcome_logo">Welcome logo</string>
    <string name="tv_title">Состав числа</string>
    <string name="tv_manual_text">Правила игры: перед вами будет три фигуры, две снизу и одна сверху, в двух из них будут числа. Необходимо, чтобы сумма чисел из двух нижних фигур была равна числу в верхней фигуре,для этого нужно вставить недостающее число.\n\nПример: в верхнем круге число 7, в одномиз нижних знак вопроса, а в другом число 4. Значит на месте вопросительного знака должнобыть число 3, потому что 3 + 4 = 7</string>
    <string name="bt_understand">Понятно</string>
    <string name="tv_choose_level">Выберите уровень:</string>
    <string name="bt_level_test">Тестовый</string>
    <string name="bt_level_easy">Лёгкий</string>
    <string name="bt_level_normal">Средний</string>
    <string name="bt_level_hard">Тяжёлый</string>
    <string name="tv_answers_progress">Правильных ответов %s (минимум %s)</string>
    <string name="game_over">Game Over</string>
    <string name="tv_required_answers">Необходимое количество правильных ответов: %s</string>
    <string name="tv_score_answers">Ваш счёт: %s</string>
    <string name="tv_required_percentage">Необходимый процент правильных ответов: %s</string>
    <string name="tv_score_percentage">Процент правильных ответов: %s</string>
    <string name="bt_retry">Попробовать снова</string>
    <string name="tv_question">\?</string>
</resources>