<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.GameFinishedFragment">

    <ImageView
        android:id="@+id/emoji_result"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="48dp"
        android:contentDescription="@string/game_over"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_required_answers"
        tools:srcCompat="@drawable/ic_smile" />

    <TextView
        android:id="@+id/tv_required_answers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/tv_required_answers"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_score_answers"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tv_score_answers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tv_score_answers"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/tv_required_answers"
        app:layout_constraintTop_toBottomOf="@id/tv_required_answers"
        app:layout_constraintEnd_toEndOf="@id/tv_required_answers"
        app:layout_constraintBottom_toTopOf="@id/tv_required_percentage" />

    <TextView
        android:id="@+id/tv_required_percentage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tv_required_percentage"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/tv_required_answers"
        app:layout_constraintTop_toBottomOf="@id/tv_score_answers"
        app:layout_constraintEnd_toEndOf="@id/tv_required_answers"
        app:layout_constraintBottom_toTopOf="@id/tv_score_percentage" />

    <TextView
        android:id="@+id/tv_score_percentage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tv_score_percentage"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/tv_required_answers"
        app:layout_constraintTop_toBottomOf="@id/tv_required_percentage"
        app:layout_constraintEnd_toEndOf="@id/tv_required_answers"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/bt_retry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/bt_retry"
        android:layout_marginBottom="16dp"
        app:layout_constraintStart_toStartOf="@id/tv_required_answers"
        app:layout_constraintEnd_toEndOf="@id/tv_required_answers"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>